# llm_flashcard_maker

./: .gitignore  README.md  example.py  hello.py  main.py  pyproject.toml  requirements.txt  train.jsonl  valid.jsonl
lfm/: __init__.py  llm.py
templates/: export_result.html  index.html
