[project]
name = "llm-flashcard-maker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anki>=25.7.5",
    "datasets>=4.0.0",
    "fastapi[standard]>=0.116.1",
    "jinja2>=3.1.6",
    "jsonpickle>=4.1.1",
    "mlx>=0.28.0",
    "mlx-lm[train]>=0.26.3",
    "openai>=1.101.0",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "sqlmodel>=0.0.24",
]
